adds shader manager

--- a/ILoveOpenGL/ILoveOpenGL.vcxproj
+++ b/ILoveOpenGL/ILoveOpenGL.vcxproj
@@ -151,8 +151,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cShader.cpp" />
+    <ClCompile Include="cShaderManager.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="original.cpp" />
     <ClCompile Include="theMain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cShaderManager.h" />
+    <ClInclude Include="globalStuff.h" />
+    <ClInclude Include="linmath.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
